# RustyChess

./: LICENSE  README.md
backend/: .env  Cargo.toml  diesel.toml
backend/dbScripts/: addUserScript.sql
backend/migrations/2025-02-07-135714_initial/: down.sql  up.sql
backend/src/: board.rs  main.rs  move_validator.rs  mysql.rs  schema.rs  user.rs
